<resources>
    <string name="app_name">Books_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="web_client_id">70883115641-s9rjljfiqp0a6ihmvqke56tfpor304fq.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="next">Continue</string>
    <string name="or">Or</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_apple">Login with Apple</string>
    <string name="don_t_have_">Don\'t have an account? Sign up</string>
    <string name="forgot_your">Forgot your password? Don\'t worry, enter your email to reset your current password.</string>
    <string name="submit">Submit</string>
    <string name="recover_pas">Recover Password</string>
    <string name="page_title">Back to Log in</string>
    <string name="looks_like_">Looks like you don\'t have an account.\nLet\'s create a new account for you.</string>
    <string name="terms">By selecting Create Account below, I agree to Terms of Service &amp; Privacy Policy</string>
    <string name="already_hav">Already have an account? Log in</string>
    <string name="john_doe">John Doe</string>
    <string name="john_doe_ex">john.doe@example.com</string>
    <string name="verify_code">Verify Code</string>
    <string name="an_authentication">An authentication code has been sent to your email.</string>
    <string name="enter_code">Enter Code</string>
    <string name="verify">Verify</string>
    <string name="don_t_receive">Don\'t receive a code?</string>
    <string name="resend">Resend</string>
    <string name="set_password">Set Password</string>
    <string name="code_verified">Code verified</string>
    <string name="enter_new_p">Enter new password</string>
    <string name="re_type_new">Re-type new password</string>
    <string name="at_least_8_">At-least 8 characters</string>
    <string name="select_genre">Select Genres</string>
    <string name="select_the_">Select the type of book you enjoy reading.</string>
    <string name="fiction">Fiction</string>
    <string name="show_more">Show more</string>
    <string name="select_3_or">Select 3 or more genres to continue</string>
    <string name="royryan_mer">Royryan Merc...</string>
    <string name="trending">Trending</string>
    <string name="get_unlimited">Get unlimited access to books in just</string>
    <string name="terms_condition">*Terms &amp; conditions apply</string>
    <string name="some_id">$9.99</string>
    <string name="show_all">Show all</string>
    <string name="the_good_guy">The good guy</string>
    <string name="mark_mcalli">Mark mcallister</string>
    <string name="continue_li">Continue Listening</string>
    <string name="managers_wh">Managers who want to create positive work environments...</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="minutes_rea">5-Minutes read</string>
    <string name="project_man">Project Management for the Unofficial Proect Manager</string>
    <string name="kory_kogon_">Kory Kogon, Suzette Blakemore, and James wood</string>
    <string name="a_fanklinco">A FanklinConvey Title</string>
    <string name="about_this_">About this Book</string>
    <string name="getting_alo">Getting Along (2022) describes the importance of workplace interactions and their effecs on productivity and creaiviy.</string>
    <string name="personal_gr">Personal growth</string>
    <string name="chapters">56 Chapters</string>
    <string name="explore">Explore</string>
    <string name="topics">Topics</string>
    <string name="saved_books">Saved Books</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="title_author">Title, author or keyword</string>
    <string name="profile_details">Profile details</string>
    <string name="payment">Payment</string>
    <string name="subscription">Subscription</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="feel_free">Feel free to ask, We are here to help</string>
    <string name="change_prof">Change profile picture</string>
    <string name="add_payment">Add payment method</string>
    <string name="ulimited_in">Ulimited insights from books, courses documentaries, and podcasts.</string>
    <string name="add_new_payment_method">Add New Payment Method</string>
    <string name="try_book_ne">Try Book Nexus Premmium</string>
    <string name="billed_recu">Billed &amp; recurring monthly \nCancel anytime</string>
    <string name="button">Start 3-day free trail now</string>
    <string name="your_member">Your membership starts as soon as you set up payment and subscribe. Your monthly charge will occur on the last day of the current billing period. We\u00e2\u0080\u0099ll renew your membership for you can manage your subscription or turn off auto-renewal under accounts setting.</string>
    <string name="by_continue">By continuing, you are agreeing to these terms. See the privac statement and restricions.</string>
    <string name="we_re_givin">We\'re giving you Premium access for 3 days, for free</string>
    <string name="premium_pla">Premium Plan\nOverview</string>
    <string name="your_premiu">Your premium subscription plan ending on 7-19-22. You can renew your plan to enjoy ads free readings.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="account">Account</string>
</resources>