<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/genre_prefs"
    android:background="#181A1A"
    tools:context=".GenrePreferencesFragment">

    <TextView
        android:id="@+id/select_genr"
        android:layout_width="224dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:text="@string/select_genre"
        android:textAppearance="@style/select_genre"
        android:gravity="center_vertical"
        />
    <RelativeLayout
        android:id="@+id/frame_64"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="127dp"
        android:paddingVertical="24dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/login_card"
        >
        <TextView
            android:id="@+id/select_the_"
            android:layout_width="326dp"
            android:layout_height="17dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/select_the_"
            android:textAppearance="@style/select_the_"
            android:gravity="center_vertical"
            />
        <RelativeLayout
            android:id="@+id/frame_133"
            android:layout_width="326dp"
            android:layout_height="375dp"
            android:layout_marginVertical="24dp"
            android:layout_marginHorizontal="16dp"
            android:layout_below="@+id/select_the_"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genreList"
                tools:listitem="@layout/custom_genre_type"
                />
            <TextView
                android:id="@+id/show_more"
                android:layout_width="326dp"
                android:layout_height="17dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:text="@string/show_more"
                android:textAppearance="@style/show_more"
                android:gravity="center_horizontal|center_vertical"
                />
        </RelativeLayout>

            <LinearLayout
                android:id="@+id/btnSubmit"
                android:layout_below="@id/frame_133"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_continue_layout">
                <TextView
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/next"
                    android:textAppearance="@style/button_next"
                    android:gravity="center_horizontal|center_vertical"
                    />
            </LinearLayout>
        <TextView
            android:id="@+id/select_3_or"
            android:layout_width="match_parent"
            android:layout_below="@id/btnSubmit"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/select_3_or"
            android:textAppearance="@style/select_3_or"
            android:gravity="center_horizontal|center_vertical"
            />

    </RelativeLayout>
</RelativeLayout>