<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_up"
    android:background="#181A1A"
    tools:context=".SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/login_bg">
        <TextView
            android:id="@+id/recover_pas"
            android:layout_width="296dp"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="32dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="235dp"
            android:text="@string/recover_pas"
            android:textAppearance="@style/recover_pas"
            android:gravity="center_vertical"
            />

        <RelativeLayout
            android:id="@+id/frame_64"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_alignParentTop="true"
            android:paddingVertical="24dp"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="289dp"
            android:background="@drawable/login_card">


            <TextView
                android:id="@+id/forgot_your_pass"
                android:layout_width="326dp"
                android:layout_height="34dp"
                android:text="@string/forgot_your"
                android:textAppearance="@style/forgot_your_pass"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                />
            <RelativeLayout
                android:id="@+id/frame_63"
                android:layout_below="@+id/forgot_your_pass"
                android:layout_width="326dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="16dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="16dp"
                    android:id="@+id/llEditTexts"
                    >
                    <include
                        layout="@layout/custom_name_layout"/>
                    <include
                        layout="@layout/custom_email_layout"
                        />
                    <include
                        layout="@layout/custom_password_layout"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="326dp"
                    android:layout_height="34dp"
                    android:text="@string/terms"
                    android:textAppearance="@style/terms"
                    android:gravity="center_vertical"
                    android:layout_below="@id/llEditTexts"
                    />

                <LinearLayout
                    android:id="@+id/btnSubmit"
                    android:layout_below="@+id/terms"
                    android:layout_width="326dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/btn_continue_layout">
                    <TextView
                        android:id="@+id/btnContinue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/submit"
                        android:textAppearance="@style/submit"
                        android:gravity="center_horizontal|center_vertical"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/already_have_acc"
                    android:layout_width="326dp"
                    android:layout_height="20dp"
                    android:text="@string/already_hav"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/already_hav"
                    android:layout_below="@+id/btnSubmit"
                    android:gravity="center_horizontal|center_vertical"
                    />
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>