<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forgot_pass_code"
    android:background="#181A1A"
    tools:context=".ForgotPasswordCodeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/login_bg">
        <TextView
            android:id="@+id/recover_pas_code"
            android:layout_width="296dp"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="32dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="235dp"
            android:text="@string/verify_code"
            android:textAppearance="@style/verify_code"
            android:gravity="center_vertical"
            />

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/frame_64"
            android:layout_width="match_parent"
            android:layout_height="259dp"
            android:layout_marginHorizontal="16dp"
            android:layout_alignParentTop="true"
            android:paddingVertical="24dp"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="289dp"
            android:background="@drawable/login_card">

            <TextView
                android:id="@+id/forgot_your_pass"
                android:layout_width="326dp"
                android:layout_height="34dp"
                android:text="@string/an_authentication"
                android:textAppearance="@style/an_authentication"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                />
            <RelativeLayout
                android:id="@+id/frame_63"
                android:layout_below="@+id/forgot_your_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="16dp"
                >
                <include
                    layout="@layout/custom_verify_code"
                    />
                <LinearLayout
                    android:id="@+id/btnSubmit"
                    android:layout_below="@+id/llEmail"
                    android:layout_width="326dp"
                    android:layout_height="35dp"
                    android:background="@drawable/btn_continue_layout">
                    <TextView
                        android:id="@+id/btnContinue"
                        android:layout_width="294dp"
                        android:layout_height="match_parent"
                        android:text="@string/verify"
                        android:textAppearance="@style/verify"
                        android:gravity="center_horizontal|center_vertical"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnSubmit"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/don_t_receive"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/don_t_receive"
                        android:textAppearance="@style/don_t_have_acc"
                        android:gravity="center_horizontal|center_vertical"
                        />
                    <TextView
                        android:id="@+id/resend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resend"
                        android:layout_marginStart="10dp"
                        android:textAppearance="@style/resend"
                        android:gravity="center_horizontal|center_vertical"
                        />
                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:src="@drawable/uil_Reload"
                        android:layout_marginStart="2dp"
                        android:gravity="center_horizontal|center_vertical"
                        />
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/appBarId"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:layout_marginLeft="10dp"
                android:id="@+id/btnBack"
                android:src="@drawable/back_button"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/page_title"
                android:layout_toRightOf="@+id/btnBack"
                android:text="@string/page_title"
                android:textAppearance="@style/page_title"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>