<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181A1A"
    tools:context=".fragments.SuccessPaymentFragment">

    <RelativeLayout
        android:id="@+id/uil_check_c"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="126dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="113dp"
        android:clipToOutline="true"
        android:background="@drawable/checked_icon"
        />
    <RelativeLayout
        android:layout_below="@id/uil_check_c"
        android:id="@+id/frame_131"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:id="@+id/we_re_givin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_re_givin"
            android:textAppearance="@style/we_re_givin"
            android:lineSpacingExtra="-2sp"
            android:gravity="center_horizontal|center_vertical"
            />
        <TextView
            android:layout_below="@id/we_re_givin"
            android:layout_marginTop="10dp"
            android:id="@+id/ulimited_in"
            android:layout_width="358dp"
            android:layout_height="38dp"
            android:text="@string/ulimited_in"
            android:textAppearance="@style/ulimited_in"
            android:gravity="center_horizontal|center_vertical"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="?attr/actionBarSize"
        android:background="@drawable/btn_continue_layout"
        >
        <TextView
            android:id="@+id/continue_btn"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textAppearance="@style/button"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

</RelativeLayout>